--- a/Shahrah.Transporter.Api/appsettings.json
+++ b/Shahrah.Transporter.Api/appsettings.json
@@ -14,7 +14,7 @@
     "ReportBaseUrl": "http://localhost:5410",
     "AppDownloadLink": "https://www.shaharah.com",
     "IdentityServer": {
-      "Authority": "https://localhost",
+      "Authority": "https://localhost:7107",
       "ClientName": "Transporter",
       "ClientSecret": "nSJnoLnOgkHyg9bKOqwyEzZZL0j2DNxO",
       "Audience": "tcApi",
@@ -28,10 +28,11 @@
     "Instance": "Shahrah"
   },
   "Redis": {
-    "Endpoints": "localhost:6379"
+    "Endpoints": [ "localhost:6379" ],
+    "Password" :  "password"
   },
   "Kafka": {
-    "Brokers": "localhost:9092",
+    "Brokers": "localhost:29092",
     "Group": "transporter",
     "ResponsesTopic": "transporter-responses",
     "TimeOut": 60
@@ -72,7 +73,7 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Server=.;Database=shahrah-transporter-dev;User Id=sa;Password=123456;"
+    "Default": "Server=.;Database=shahrah-transporter-dev;User Id=datarw;Password=1qaz@WSX;Trust Server Certificate=true;Encrypt=True;"
   },
   "Logging": {
     "LogLevel": {
