--- a/Shahrah.Transporter.Application/Shahrah.Transporter.Application.csproj
+++ b/Shahrah.Transporter.Application/Shahrah.Transporter.Application.csproj
@@ -1,18 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentValidation" Version="11.2.1" />
-    <PackageReference Include="GraphQL.Client" Version="5.1.0" />
-    <PackageReference Include="GraphQL.Client.Serializer.SystemTextJson" Version="5.1.0" />
-    <PackageReference Include="GraphQL.MicrosoftDI" Version="7.1.1" />
-    <PackageReference Include="GraphQL.SystemTextJson" Version="7.1.1" />
-    <PackageReference Include="MediatR" Version="10.0.1" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="SlimMessageBus" Version="1.8.0-rc1" />
+    <PackageReference Include="FluentValidation" Version="11.10.0" />
+    <PackageReference Include="GraphQL.Client" Version="6.1.0" />
+    <PackageReference Include="GraphQL.Client.Serializer.SystemTextJson" Version="6.1.0" />
+    <PackageReference Include="GraphQL.MicrosoftDI" Version="8.1.0" />
+    <PackageReference Include="GraphQL.SystemTextJson" Version="8.1.0" />
+    <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="SlimMessageBus" Version="2.0.4" />
   </ItemGroup>
 
   <ItemGroup>
