update to key clock

--- a/Shahrah.Transporter.Api/appsettings.json
+++ b/Shahrah.Transporter.Api/appsettings.json
@@ -14,9 +14,9 @@
     "ReportBaseUrl": "http://localhost:5410",
     "AppDownloadLink": "https://www.shaharah.com",
     "IdentityServer": {
-      "Authority": "https://localhost:7107",
-      "ClientName": "Transporter",
-      "ClientSecret": "nSJnoLnOgkHyg9bKOqwyEzZZL0j2DNxO",
+      "Authority": "http://localhost:8080/realms/shahrah",
+      "ClientId": "shahrah-transporter",
+      "ClientSecret": "CmnHfZCzsb71NZkbBzF7tXAvsdFcb1XQ",
       "Audience": "tcApi",
       "ValidateAudience": true,
       "ValidateIssuer": true,
