update  to keyclock version

--- a/Shahrah.Transporter.Api/appsettings.json
+++ b/Shahrah.Transporter.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "OldIdentityServer" : {
+    "Url" : "https://localhost:7107"
+  },
   "AppSettings": {
     "Name": "Transporter",
     "AuctionDurationBySecond": 90,
@@ -28,8 +31,10 @@
     "Instance": "Shahrah"
   },
   "Redis": {
-    "Endpoints": [ "localhost:6379" ],
-    "Password" :  "password"
+    "Endpoints": [
+      "localhost:6379"
+    ],
+    "Password": "password"
   },
   "Kafka": {
     "Brokers": "localhost:29092",
