--- a/Shahrah.Transporter.Api/Shahrah.Transporter.Api.csproj
+++ b/Shahrah.Transporter.Api/Shahrah.Transporter.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -15,6 +15,10 @@
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.10.0" />
     <PackageReference Include="IdentityModel" Version="7.0.0" />
     <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="SlimMessageBus.Host.AspNetCore" Version="2.5.3" />
     <PackageReference Include="SlimMessageBus.Host.Kafka" Version="2.5.3" />
     <PackageReference Include="SlimMessageBus.Host.Outbox" Version="2.5.3" />
@@ -27,6 +31,18 @@
     <ProjectReference Include="..\Shahrah.Transporter.Domain\Shahrah.Transporter.Domain.csproj" />
     <ProjectReference Include="..\Shahrah.Transporter.Infrastructure\Shahrah.Transporter.Infrastructure.csproj" />
     <ProjectReference Include="..\..\shahrah-framework\Shahrah.Framework\Shahrah.Framework.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="appsettings.Development.json">
+      <DependentUpon>appsettings.json</DependentUpon>
+    </Content>
+    <Content Update="appsettings.Stagging.json">
+      <DependentUpon>appsettings.json</DependentUpon>
+    </Content>
+    <Content Update="appsettings.Swarm.json">
+      <DependentUpon>appsettings.json</DependentUpon>
+    </Content>
   </ItemGroup>
 
 </Project>
