update db configs

--- a/Shahrah.Transporter.Api/appsettings.json
+++ b/Shahrah.Transporter.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "OldIdentityServer" : {
-    "Url" : "https://localhost:7107"
+  "OldIdentityServer": {
+    "Url": "http://localhost:5107"
   },
   "AppSettings": {
     "Name": "Transporter",
@@ -19,7 +19,7 @@
     "IdentityServer": {
       "Authority": "http://localhost:8080/realms/shahrah",
       "ClientId": "shahrah-transporter",
-      "ClientSecret": "CmnHfZCzsb71NZkbBzF7tXAvsdFcb1XQ",
+      "ClientSecret": "ww7AWpFzXpdijQzkhTx7Vly2TpksiPij",
       "Audience": "tcApi",
       "ValidateAudience": true,
       "ValidateIssuer": true,
