--- a/Shahrah.Transporter.Api/Shahrah.Transporter.Api.csproj
+++ b/Shahrah.Transporter.Api/Shahrah.Transporter.Api.csproj
@@ -1,47 +1,58 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <UserSecretsId>3c6d3eea-7da6-4a15-836a-6e63286a3bb2</UserSecretsId>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
-  </PropertyGroup>
+	<PropertyGroup>
+		<UserSecretsId>3c6d3eea-7da6-4a15-836a-6e63286a3bb2</UserSecretsId>
+		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+		<DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <None Remove="Properties\launchSettings.json~RF9572e9.TMP" />
-  </ItemGroup>
+	<ItemGroup>
+		<None Remove="Properties\launchSettings.json~RF9572e9.TMP" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.10.0" />
-    <PackageReference Include="IdentityModel" Version="7.0.0" />
-    <PackageReference Include="MediatR" Version="12.4.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.8">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="SlimMessageBus.Host.AspNetCore" Version="2.5.3" />
-    <PackageReference Include="SlimMessageBus.Host.Kafka" Version="2.5.3" />
-    <PackageReference Include="SlimMessageBus.Host.Outbox" Version="2.5.3" />
-    <PackageReference Include="SlimMessageBus.Host.Outbox.DbContext" Version="2.5.3" />
-    <PackageReference Include="SlimMessageBus.Host.Serialization.Json" Version="2.5.3" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.10.0" />
+		<PackageReference Include="IdentityModel" Version="7.0.0" />
+		<PackageReference Include="MediatR" Version="12.4.1" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.8">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="SlimMessageBus.Host.AspNetCore" Version="2.5.3" />
+		<PackageReference Include="SlimMessageBus.Host.Kafka" Version="2.5.3" />
+		<PackageReference Include="SlimMessageBus.Host.Outbox" Version="2.5.3" />
+		<PackageReference Include="SlimMessageBus.Host.Outbox.DbContext" Version="2.5.3" />
+		<PackageReference Include="SlimMessageBus.Host.Serialization.Json" Version="2.5.3" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Shahrah.Transporter.Application\Shahrah.Transporter.Application.csproj" />
-    <ProjectReference Include="..\Shahrah.Transporter.Domain\Shahrah.Transporter.Domain.csproj" />
-    <ProjectReference Include="..\Shahrah.Transporter.Infrastructure\Shahrah.Transporter.Infrastructure.csproj" />
-    <ProjectReference Include="..\..\shahrah-framework\Shahrah.Framework\Shahrah.Framework.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Shahrah.Transporter.Application\Shahrah.Transporter.Application.csproj" />
+		<ProjectReference Include="..\Shahrah.Transporter.Domain\Shahrah.Transporter.Domain.csproj" />
+		<ProjectReference Include="..\Shahrah.Transporter.Infrastructure\Shahrah.Transporter.Infrastructure.csproj" />
+		<ProjectReference Include="..\..\shahrah-framework\Shahrah.Framework\Shahrah.Framework.csproj" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Content Update="appsettings.Development.json">
-      <DependentUpon>appsettings.json</DependentUpon>
-    </Content>
-    <Content Update="appsettings.Stagging.json">
-      <DependentUpon>appsettings.json</DependentUpon>
-    </Content>
-    <Content Update="appsettings.Swarm.json">
-      <DependentUpon>appsettings.json</DependentUpon>
-    </Content>
-  </ItemGroup>
+	<ItemGroup>
+		<Content Update="appsettings.Development.json">
+			<IsTransformFile>true</IsTransformFile>
+			<DependentUpon>appsettings.json</DependentUpon>
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+		<Content Update="appsettings.Stagging.json">
+			<IsTransformFile>true</IsTransformFile>
+			<DependentUpon>appsettings.json</DependentUpon>
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+		<Content Update="appsettings.Swarm.json">
+			<IsTransformFile>true</IsTransformFile>
+			<DependentUpon>appsettings.json</DependentUpon>
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+		<Content Update="appsettings.DockerDev.json">
+			<IsTransformFile>true</IsTransformFile>
+			<DependentUpon>appsettings.json</DependentUpon>
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
 
 </Project>
